log
Fri, Apr  8, 2022  4:03:25 PM: 
 tests:  0|6
total_score: 0/70
e94c888
Fri, Apr  8, 2022  4:13:39 PM: 
 hashmap.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function 'insertMap':
hashmap.c:43:11: error: unused variable 'new' [-Werror=unused-variable]
     Pair *new = (Pair *) calloc(sizeof(Pair), 1);
           ^~~
hashmap.c: In function 'createMap':
hashmap.c:56:18: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
     map->buckets = (Pair *) malloc(sizeof(Pair) * capacity);
                  ^
hashmap.c:58:18: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
     map->current = NULL;
                  ^
cc1.exe: all warnings being treated as errors
Compilation failed
499ef04
Fri, Apr  8, 2022  4:15:05 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function 'insertMap':
hashmap.c:43:11: error: unused variable 'new' [-Werror=unused-variable]
     Pair *new = (Pair *) calloc(sizeof(Pair), 1);
           ^~~
hashmap.c: In function 'createMap':
hashmap.c:56:18: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
     map->buckets = (Pair *) malloc(sizeof(Pair) * capacity);
                  ^
cc1.exe: all warnings being treated as errors
Compilation failed
4c18ecc
Fri, Apr  8, 2022  4:15:33 PM: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function 'createMap':
hashmap.c:55:18: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
     map->buckets = (Pair *) malloc(sizeof(Pair) * capacity);
                  ^
cc1.exe: all warnings being treated as errors
Compilation failed
1dfa93d
Fri, Apr  8, 2022  4:16:11 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
58850e3
Fri, Apr  8, 2022  4:17:04 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
864acbe
